--- a/public/index_app/css/main2.css
+++ b/public/index_app/css/main2.css
@@ -476,7 +476,7 @@ a:hover {
 .header .menu-row ul.nav li {
 	display: flex;
 	align-items: center;
-	padding: 0 1%;
+	padding: 0 1.2%;
 	background-color: #3b5998;
 	font-size: 16px;
 	color: #e0e0e0;
@@ -1273,7 +1273,13 @@ img {
 .main-menu.mob li {
 	padding-bottom: 5px
 }
+.main-menu2{
+	margin-top: 20px;
 
+}
+.header .menu-row .main-menu2.nav{
+	justify-content: flex-start;
+}
 .header .top-row .top-menu.mob li:hover a:before {
 	content: none !important
 }
